# infinitive-clauses

./: README.md  pyproject.toml
infinitive_clauses/: cli.py  nlp.py
tests/: test_infinitive_clauses.py
tests/texts/: 64843-0.txt
