[tool.poetry]
name = "infinitive-clauses"
version = "0.1.0"
description = ""
authors = ["zar3bski <zarebskidavid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
